after code review: search result images edited so they don't look squished tho now they're all different sizes.., content fixed to look good on 320px wide screen as well

--- a/main.css
+++ b/main.css
@@ -105,7 +105,7 @@ main h3 {
 /* form */
 form {
     padding-top: 30px;
-    width: 360px;
+    width: 320px;
     margin-left: auto;
     margin-right: auto;
     text-align: center
@@ -238,7 +238,7 @@ main h4 {
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    width: 340px;
+    width: 310px;
     height: 500px;
     margin-left: auto;
     margin-right: auto;
@@ -276,7 +276,7 @@ main h4 {
 .card img {
     border-top-left-radius: inherit;
     border-top-right-radius: inherit;
-    height: 200px;
+    max-height: 200px;
     max-width: 100%;
     display: block;
     margin-left: auto;
@@ -323,6 +323,24 @@ footer {
 }
 
 /* responsive */
+
+@media screen and (min-width: 375px) {
+
+    .card {
+        width: 340px
+    }
+
+    form {
+        width: 360px
+    }
+
+    .player {
+        width: 375px;
+        height: 210px;
+    }
+
+}
+
 @media screen and (min-width: 450px) {
 
     .headline {
